Don't cancel CustomEvents with type beforeunload

If we return the boolean false in a beforeunload eventlistener,
the unload event will get canceled. This is not per-spec,
which is in https://html.spec.whatwg.org/multipage/webappapis.html#the-event-handler-processing-algorithm 

This is caused because the return value of the event listener is not converted to DOMString, 
because OnBeforeUnloadEventHandler is not currently implemented.
See: https://cs.chromium.org/chromium/src/third_party/WebKit/Source/core/frame/WindowEventHandlers.idl?q=beforeunloadeventhandler&dr=C&l=39
This is a temporary fix for the problem, making sure that CustomEvents with the type
beforeunload won't get canceled (in accordance to the spec). 

Bug: 692203
Change-Id: Ic31e8b90fb2edad173e99ac6a7d9059162a53278