third_party/WebKit/Source/bindings/core/v8/V8AbstractEventListener.cpp
@@ -173,7 +173,12 @@ void V8AbstractEventListener::InvokeEventHandler(
     ToBeforeUnloadEvent(event)->setReturnValue(string_return_value);
   }
 
-  if (is_attribute_ && ShouldPreventDefault(return_value))
+  // The last condition is to guarantee CustomEvents with the type beforeunload
+  // won't get canceled, in accordance to spec
+  // https://html.spec.whatwg.org/multipage/webappapis.html#the-event-handler-processing-algorithm
+  // Should be removed once OnBeforeUnloadEventHandler is implemented
+  if (is_attribute_ && ShouldPreventDefault(return_value) &&
+      (event->IsBeforeUnloadEvent() || !(event->type() == EventTypeNames::beforeunload)))
     event->preventDefault();
 }
 
